--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-    "name": "jsonserver",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "json-server --watch ./database/db.json"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "json-server": "^0.17.1"
-    }
+  "name": "jsonserver",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "json-server --watch ./database/db.json"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "json-server": "^0.17.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/144bharat/coffeeapp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/144bharat/coffeeapp/issues"
+  },
+  "homepage": "https://github.com/144bharat/coffeeapp#readme",
+  "description": ""
 }
